<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/save_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cornered_rect"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pass" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:importantForAutofill="no"
            android:inputType="textWebPassword"
            android:maxLines="1" />

        <TextView
            android:id="@+id/confirm_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_pass" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:importantForAutofill="no"
            android:inputType="textWebPassword"
            android:maxLines="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>