<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.text.Editable" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.firebasechat.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email_input_hint"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.mEmail}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password_input_hint"
                android:hint="@string/password_input_hint"
                android:inputType="textWebPassword"
                android:paddingTop="16dp"
                android:text="@={viewModel.mPassword}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_field" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.enableLoginButton}"
                android:onClick="@{() -> viewModel.signInWithEmailPass()}"
                android:text="@string/login_btn_txt"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.fireBaseUser.status == viewModel.fireBaseUser.status.LOADING ? View.VISIBLE : View.GONE}" />

        <include
            android:id="@+id/error_layout"
            layout="@layout/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.fireBaseUser.status == viewModel.fireBaseUser.status.ERROR ? View.VISIBLE : View.GONE}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>