<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="settingsFragment"
            type="com.example.firebasechat.ui.settings.SettingsFragment" />

        <variable
            name="viewModel"
            type="com.example.firebasechat.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <ScrollView
            android:id="@+id/user_data_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                tools:context=".ui.settings.SettingsFragment">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/user_avatar_desc"
                    android:onClick="@{() -> settingsFragment.showEditImageDialog()}"
                    app:imageUrl="@{viewModel.userLiveData.avatar}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.2" />

                <LinearLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/cornered_rect"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avatar">

                    <TextView
                        android:id="@+id/get_from_url_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/name"
                        android:textSize="@dimen/chat_item_date_text" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sender_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/name"
                        android:focusable="false"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:longClickable="false"
                        android:onClick="@{() -> settingsFragment.showEditNameDialog()}"
                        android:paddingTop="16dp"
                        android:text="@{viewModel.userLiveData.name}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/cornered_rect"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_layout">

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="@dimen/chat_item_date_text" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="textWebPassword|none"
                        android:longClickable="false"
                        android:onClick="@{() -> settingsFragment.showEditPassDialog()}"
                        android:paddingTop="16dp"
                        android:text="@{viewModel.userLiveData.password}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/cornered_rect"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_layout">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="@dimen/chat_item_date_text" />

                    <TextView
                        android:id="@+id/email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="start"
                        android:text="@{viewModel.userLiveData.email}"
                        android:textColor="@color/email_txt_color"
                        android:textSize="20sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.updateResult.status == viewModel.updateResult.status.LOADING ? View.VISIBLE : View.GONE}" />

        <include
            android:id="@+id/error_layout"
            layout="@layout/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.updateResult.status == viewModel.updateResult.status.ERROR || viewModel.updateResult.status == viewModel.updateResult.status.CANCELED ? View.VISIBLE : View.GONE}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>